--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     window.$docsify = {
         loadSidebar: true,
         subMaxLevel: 2,
+        auto2top: true,
+        formatUpdated: '{MM}/{DD} {HH}:{mm}',
+        
+        name: '<span>Rapid Response</span>',
         
       //...
     }
