changed logo, also worked on navigation of user docs (sidebar sleections)

--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
         subMaxLevel: 2,
         auto2top: true,
         formatUpdated: '{MM}/{DD} {HH}:{mm}',
-        
-        name: '<span>Rapid Response</span>',
+        search: {
+          placeholder: 'Type to search',
+          hideOtherSidebarContent: true,
+        },
         
       //...
     }
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
 </body>
 </html>
