--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,9 @@
                 <label class="flex flex-col">Your Name: <input type="text" name="name" /></label>   
               </p>
               <p>
+                <label class="flex flex-col">Your Organization: <input type="text" name="name" /></label>   
+              </p>
+              <p>
                 <label class="flex flex-col">Your Email: <input type="email" name="email" /></label>
               </p>
               <p>
