--- a/contact.html
+++ b/contact.html
@@ -27,10 +27,10 @@
                 <label class="flex flex-col">Your Name: <input type="text" name="name" /></label>   
               </p>
               <p>
-                <label class="flex flex-col">Your Organization: <input type="text" name="name" /></label>   
+                <label class="flex flex-col">Your Organization: <input type="text" name="organization" /></label>   
               </p>
               <p>
-                <label class="flex flex-col">Your Email: <input type="text" name="organization" /></label>
+                <label class="flex flex-col">Your Email: <input type="email" name="email" /></label>
               </p>
               <p>
                 <label class="flex flex-col">Message: <textarea name="message"></textarea></label>
